profiling-using-exp-runner/backup_FINAL_RESULTS/dft_experiment/run_7_repetition_0/energibridge.log
sampling interval: 200, target function: DFT_cache, input size: 8192
  File "<string>", line 1
    import sys; import os; import numpy as np; sys.path.append(/Users/rr/GreenLab/ProjectCode/profiling-using-exp-runner/packages); import cpu.dft as module; X = tuple(np.random.random(8192)); module.DFT_cache(X)
                                                               ^
SyntaxError: invalid syntax
Energy consumption in joules: 7.825096740722656 for 0.22986202 sec of execution.
